[package]
name = "rust-vaults"
authors = ["Simon Pichugin <simon.pichugin@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A simple blog that being written in Rust"
repository = "https://github.com/droideck/rust-vaults"

[dependencies]
yew = "0.19"
yew-router = { version = "0.16.1", package = "yew-router-nested" }
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
gloo-utils = "0.1"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
patternfly-yew = "0.2.0"
strum = "0.19"
log = "0.4"

[patch.crates-io]
# original - 32c809e030ca9ec5f7785dc7e0a78d574b9830f8
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "32c809e030ca9ec5f7785dc7e0a78d574b9830f8" }
